# easyPV

./: .gitignore  .nojekyll  FIREBASE_SETUP.md  index.css  index.html  index.json  package-lock.json  package.json  progress.md  theme_bridge.js
.github/workflows/: smoke-tests.yml
__admin_dont_push/: FIREBASE_SETUP.md  __protocoll_implementationloop.md  firebase.config.local.example.js
__admin_dont_push/AgentStuff/: __protocoll_implementationloop.md
__admin_dont_push/fireBaseGetter/: Cargo.toml  README.md  codex_protocoll_allFeedBack.txt  feedback_all_games.json  fireBaseGetter.node.mjs  run_fireBaseGetter.command
__admin_dont_push/fireBaseGetter/src/: main.rs
__admin_dont_push/shared/: firebase-feedback-client.js
__agent_dont_push/: fix_folders.py  progress.md  tabularasa.md
__agent_dont_push/Game Develop Team/: __runAgent_Gamedevelop_02_doing.md
__agent_dont_push/Repo Maintainer/: persona_repoMaintainer.md
__agent_dont_push/Team-Code-Writing/: TeamChef.md  TeamMember.md  sequence.puml
__agent_dont_push/metadata/: g0-catalog.normalized.json
databases/Teil01 Grundlagen/: README.md  app_index.js  config.local.js  database-index.json  feedback.css  feedback.js  index.js  package.json  progress.md
databases/Teil03 WISO/: progress.md
databases/_testing/: README.md
databases/metadata/: g0-catalog.normalized.json  gjson-index.baseline.json
generic_pages/: generic_page.css  generic_page.html  generic_page.js
output/: gcss-theme-report.tsv  unmeasurable-progress-games.json  unmeasurable-progress-games.txt
shared/: firebase-feedback-client.js
(+5038 files in other folders)
