[package]
name = "firebase_getter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
jsonwebtoken = "9.3"
once_cell = "1.20"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-normalization = "0.1"
